--- a/Dockerfile.sample
+++ b/Dockerfile.sample
@@ -6,7 +6,7 @@
 #    By: aldubar <aldubar@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/09/13 10:25:20 by aldubar           #+#    #+#              #
-#    Updated: 2021/09/13 15:41:03 by aldubar          ###   ########.fr        #
+#    Updated: 2021/09/16 20:17:20 by aldubar          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -21,3 +21,5 @@ ARG			DIR
 COPY		${DIR} .
 
 COPY		entrypoint.sh .
+
+ENTRy
